# intelexta

./: .firebaserc  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DEPLOYMENT_GUIDE.md  DEPLOYMENT_SUMMARY.md  LOCAL_USAGE_GUIDE.md  NEXT.md  README.md  ROADMAP.md  SECURITY_ISSUE_TOP_LEVEL_SIGNATURE.md  STATUS.md  TESTING_SECURITY_FIX.md  firebase.json  gf-fixture.patch  launch-linux.sh  package-lock.json  snapshot.sh  test_json_structure.json
.firebase/: hosting.YXBwcy93ZWItdmVyaWZpZXIvZGlzdA.cache
.github/workflows/: build-cli-verifier.yml  build-desktop-alpha.yml  release.yml  web-verifier.yml
app/: index.html  package-lock.json  package.json  tsconfig.json  tsconfig.tests.json  vite.config.ts
app/src/: App.tsx
app/src/components/: ApiKeySettingsModal.tsx  CheckpointEditor.tsx  (+9 more)
apps/verifiable-summary/: CAR_FORMAT.md  CAR_LITE_PLAN.md  CAR_PROFILES.md  IMPLEMENTATION.md  QUICKSTART.md  README.md  package-lock.json  package.json
apps/web-verifier/: AGENT_SPEC_WEB_VERIFIER_PUBLIC_ROUTE.md  README.md  SECURITY_ANALYSIS.md  UI_COPY_IMPROVEMENTS.md  firebase.json  index.html  netlify.toml  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
apps/web-verifier/wasm-verify/: Cargo.toml  README.md  TESTING.md
apps/web-verifier/wasm-verify/src/: lib.rs  model.rs
apps/web-verifier/wasm-verify/tests/fixtures/: sample.car.json
config/: model_catalog.toml
docs/: ATTACHMENT_STORE_IMPLEMENTATION.md  BUTTON_DEBUG_GUIDE.md  CAR_BUNDLE_IMPLEMENTATION.md  CRITICAL_FIX_SERDE_RENAME.md  DEPLOYMENT_SUMMARY.md  DOCUMENT_PROCESSING_INTEGRATION.md  DYNAMIC_STEP_SELECTORS.md  ERROR_ANALYSIS_TYPED_STEPS.md  EXECUTIVE_SUMMARY.md  FIX_STUB_MODEL_HANDLING.md  GOVERNANCE_CHANGES_SUMMARY.md  GOVERNANCE_TESTING.md  GRADED_REPLAY_IMPLEMENTATION.md  LINUX_GRAPHICS_FIX.md  MIGRATION_V13_APPLIED.md  MODEL_CATALOG_IMPLEMENTATION.md  MVP_ANALYSIS_AND_ROADMAP.md  NEXT_STEPS_CONSOLIDATED.md  PHASE1_COMPLETE.md  PHASE1_DISCOVERY_FINDINGS.md  PHASE2_SCHEMA_IMPLEMENTATION.md  POLICY_VERSIONING_IMPLEMENTATION.md  PROJECT_CONTEXT.md  PROMPT_CHAINING_ANALYSIS.md  PROOF_MODE_STRATEGY.md  SECURITY_ARCHITECTURE_NOTES.md  SPRINT_2C_IMPLEMENTATION.md  SPRINT_2C_PROGRESS.md  SPRINT_2C_SESSION_SUMMARY.md  SPRINT_2C_TESTING_GUIDE.md  TYPED_STEPS_COMPLETE.md  TYPED_STEPS_FIXES.md  TYPED_STEPS_FIXES_APPLIED.md  TYPED_STEPS_UI_COMPLETE.md  WEEK_1_ACTION_PLAN_0.md  WEEK_1_ACTION_PLAN_1.md  WORKFLOW_CHAINING_PLAN.md
examples/: process_documents.rs
schemas/: PHASE1_DISCOVERY_FINDINGS.md  PHASE2_SCHEMA_IMPLEMENTATION.md  README.md  car-v0.2.schema.json  car-v0.4.schema.json  validate-car.js
scripts/: build-release.sh  build-wasm.sh  dev.sh
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/crates/intelexta-verify/: Cargo.toml  README.md  TESTING.md
src-tauri/crates/intelexta-verify/src/: main.rs
src-tauri/crates/intelexta-verify/tests/: verify.rs
src-tauri/icons/: icon.icns
src-tauri/src/: api.rs  api_keys.rs  attachments.rs  car.rs  chunk.rs  governance.rs  ingest.rs  keychain.rs  ledger.rs  lib.rs  main.rs  model_adapters.rs  model_catalog.rs  orchestrator.rs  portability.rs  provenance.rs  replay.rs  runtime.rs  store.rs  tests.rs
src-tauri/src/document_processing/: README.md  mod.rs  schemas.rs
src-tauri/src/document_processing/extractors/: docx.rs  latex.rs  mod.rs  pdf.rs  txt.rs
src-tauri/src/document_processing/processors/: canonical.rs  mod.rs
src-tauri/src/document_processing/utils/: file_utils.rs  mod.rs
src-tauri/src/store/: migrations.rs  mod.rs  policies.rs  project_usage_ledgers.rs  projects.rs  schema.sql
src-tauri/src/store/migrations/: 0001_initial.sql  V10__introduce_run_executions.sql  V11__add_step_type_to_run_steps.sql  V12__typed_step_system.sql  V13__add_full_output_hash.sql  V14__policy_versioning.sql  V15__project_usage_ledgers.sql  V1__initial_schema.sql  V2__add_semantic_digest_to_checkpoints.sql  V3__add_token_breakdown_to_checkpoints.sql  V4__create_checkpoint_messages.sql  V5__create_run_checkpoint_configs.sql  V6__add_checkpoint_config_reference.sql  V7__create_checkpoint_payloads.sql  V8__add_proof_mode_to_run_checkpoints.sql  V9__rename_run_checkpoints_to_run_steps.sql
src-tauri/tests/: model_catalog_integration.rs
(+59 files in other folders)
