[package]
name = "intelexta"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
anyhow = "1"
tauri = { version = "1.6", features = ["shell-open", "path-api"] }
chrono = { version = "0.4", features = ["serde"] }
rusqlite = { version = "0.31", features = ["bundled", "chrono", "serde_json"] }
uuid = { version = "1", features = ["v4"] }
r2d2 = "0.8"
r2d2_sqlite = "0.24"

sha2 = "0.10"
ed25519-dalek = { version = "2.1", features = ["serde"] }
base64 = "0.22"
clap = { version = "4.5", features = ["derive"] }
rand = "0.8" # ed25519-dalek needs a random number generator


[build-dependencies]
tauri-build = { version = "1.5", features = [] }