[package]
name = "intelexta"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    "crates/intelexta-verify",
]

# In src-tauri/Cargo.toml

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
anyhow = "1"
tauri = { version = "2.0.0-rc.15", features = [] }
chrono = { version = "0.4", features = ["serde"] }
rusqlite = { version = "0.31", features = ["bundled", "chrono", "serde_json"] }
rusqlite_migration = "1"
uuid = { version = "1", features = ["v4"] }
r2d2 = "0.8"
r2d2_sqlite = "0.24"
sha2 = "0.10"
ed25519-dalek = { version = "2.1", features = ["serde", "rand_core"] }
base64 = "0.22"
clap = { version = "4.5", features = ["derive"] }
rand = "0.8"
tiktoken-rs = "0.7.0"
pdf-extract = "0.9.0"
keyring = "3.0"
serde_jcs = "0.1.0"
hex = "0.4.3"


# THIS SECTION REPLACES YOUR OLD [build-dependencies]
[build-dependencies]
tauri-build = { version = "2.0.0-rc.13", features = [] }
