[package]
name = "intelexta-wasm-verify"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_jcs = "0.1"
serde-wasm-bindgen = "0.6"
sha2 = "0.10"
ed25519-dalek = { version = "2.1", features = ["serde"] }
wasm-bindgen = "0.2"
zip = { version = "0.6", default-features = false, features = ["deflate"] }
getrandom = { version = "0.2", features = ["js"] }

