[package]
name = "intelexta-verify"
license= "AGPL-3.0-or-later"
version = "0.1.0"
edition = "2021"

[dependencies]
# CLI framework
anyhow = "1"
clap = { version = "4.5", features = ["derive"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_jcs = "0.1"

# Main crate for CAR types
intelexta = { path = "../.." }

# Cryptography
sha2 = "0.10"
ed25519-dalek = { version = "2.1", features = ["serde"] }
hex = "0.4"
base64 = "0.22"

# File handling
zip = { version = "0.6", default-features = false, features = ["deflate"] }

# Optional: colored output
colored = "2.1"
